log
Wed, May 14, 2025 10:45:10 AM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:9: error: variable 'matriz' set but not used [-Werror=unused-but-set-variable]
     int matriz[9][9] ;
         ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Wed, May 14, 2025 10:45:44 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
410ba1a
Wed, May 14, 2025 10:47:10 AM: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
deedcf2
Wed, May 14, 2025 10:48:10 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
b848b16
Wed, May 14, 2025 10:48:46 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f40f2d4
Wed, May 14, 2025 10:49:41 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac55d67
Wed, May 14, 2025 10:49:48 AM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 5/70
602654f
Wed, May 14, 2025 10:50:33 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
82afe44
Wed, May 14, 2025 11:00:15 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:84:17: error: expected expression before '->' token
         arreglo[->sudo[i][k]] == 1 ;
                 ^~
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
e73f046
Wed, May 14, 2025 11:00:28 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:84:32: error: statement with no effect [-Werror=unused-value]
         arreglo[n->sudo[i][k]] == 1 ;
         ~~~~~~~~~~~~~~~~~~~~~~~^~~~
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
cc1.exe: all warnings being treated as errors
9cd4821
Wed, May 14, 2025 11:00:37 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:90:15: error: expected expression before '{' token
     arreglo = {0} ;
               ^
ebe9a51
Wed, May 14, 2025 11:01:13 AM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3e80c3c
